tests/error/modifier_errors/captured_classical_modified_branch.err
Error: Variable assigned in modifier block (at $FILE:11:15)
   | 
 9 |         x += 1
10 |     if b:
11 |         return x
   |                ^ `x` cannot be used...

Note:
   | 
 8 |     with power(2):
 9 |         x += 1
   |         ------ ... since it was assigned in a modifier block

Help: Variables assigned inside a modifier block are not available outside the
block

Guppy compilation failed due to 1 previous error
